fix: enable CORS
