# apps/api/src/create-list/controller.ts
@@ -9,6 +9,12 @@ export default (createList: CreateList): Handler => async (event: APIGatewayProx
     const response: APIGatewayProxyResult = {
         statusCode: 201,
         body: '',
+        headers: {
+            "Access-Control-Allow-Headers": "Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token",
+            "Access-Control-Allow-Methods": "OPTIONS,POST,GET,DELETE,PUT",
+            "Access-Control-Allow-Origin": "*",
+            "Content-Type": "application/json",
+        },
     };
 
     try {
