# apps/api/src/delete-todo/controller.ts
@@ -9,6 +9,12 @@ export default (deleteTodo: DeleteTodo): Handler => async (event: APIGatewayProx
     const response: Partial<APIGatewayProxyResult> = {
         statusCode: 201,
         body: '',
+        headers: {
+            "Access-Control-Allow-Headers": "Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token",
+            "Access-Control-Allow-Methods": "OPTIONS,POST,GET,DELETE,PUT",
+            "Access-Control-Allow-Origin": "*",
+            "Content-Type": "application/json",
+        },
     };
 
     try {
