# apps/api/src/list-todos/controller.ts
@@ -7,7 +7,13 @@ export default (listTodos: ListTodos): Handler => async (event: APIGatewayProxyE
     console.debug("Event:", event);
 
     const response: Partial<APIGatewayProxyResult> = {
-        statusCode: 200
+        statusCode: 200,
+        headers: {
+            "Access-Control-Allow-Headers": "Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token",
+            "Access-Control-Allow-Methods": "OPTIONS,POST,GET,DELETE,PUT",
+            "Access-Control-Allow-Origin": "*",
+            "Content-Type": "application/json",
+        },
     };
 
     try {
